// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterList matches the snapshot 1`] = `
Array [
  <ul>
    <li>
      <div
        className="counter"
      >
        <p>
          Current count: 
          0
        </p>
        <button
          name="increment"
          onClick={[Function]}
        >
          increment
        </button>
        <button
          name="decrement"
          onClick={[Function]}
        >
          decrement
        </button>
      </div>
    </li>
    <li>
      <div
        className="counter"
      >
        <p>
          Current count: 
          0
        </p>
        <button
          name="increment"
          onClick={[Function]}
        >
          increment
        </button>
        <button
          name="decrement"
          onClick={[Function]}
        >
          decrement
        </button>
      </div>
    </li>
  </ul>,
  <button
    className="sc-bdVaJa ihDGdR"
    onClick={[Function]}
    type="button"
  >
    add Counter
  </button>,
]
`;

exports[`CounterList render correctly (mount) 1`] = `
Array [
  <ul>
    <li
      key="0"
    >
      <div
        className="counter"
      >
        <p>
          Current count: 
          0
        </p>
        <button
          name="increment"
          onClick={[Function]}
        >
          increment
        </button>
        <button
          name="decrement"
          onClick={[Function]}
        >
          decrement
        </button>
      </div>
    </li>
    <li
      key="1"
    >
      <div
        className="counter"
      >
        <p>
          Current count: 
          0
        </p>
        <button
          name="increment"
          onClick={[Function]}
        >
          increment
        </button>
        <button
          name="decrement"
          onClick={[Function]}
        >
          decrement
        </button>
      </div>
    </li>
  </ul>,
  <styled.button
    onClick={[Function]}
    type="button"
  >
    <button
      className="sc-bdVaJa ihDGdR"
      onClick={[Function]}
      type="button"
    >
      add Counter
    </button>
  </styled.button>,
]
`;

exports[`CounterList render correctly (render) 1`] = `
Array [
  <ul>
    <li>
      <div
        class="counter"
      >
        <p>
          Current count: 0
        </p>
        <button
          name="increment"
        >
          increment
        </button>
        <button
          name="decrement"
        >
          decrement
        </button>
      </div>
    </li>
    <li>
      <div
        class="counter"
      >
        <p>
          Current count: 0
        </p>
        <button
          name="increment"
        >
          increment
        </button>
        <button
          name="decrement"
        >
          decrement
        </button>
      </div>
    </li>
  </ul>,
  <button
    class="sc-bdVaJa ihDGdR"
    type="button"
  >
    add Counter
  </button>,
]
`;

exports[`CounterList render correctly (shallow) 1`] = `
<Fragment>
  <ul>
    <li
      key="0"
    >
      <Counter />
    </li>
    <li
      key="1"
    >
      <Counter />
    </li>
  </ul>
  <Button
    onClick={[Function]}
  >
    add Counter
  </Button>
</Fragment>
`;
